# grms

./: README.md  problem_statement.md  pyproject.toml  seed_data.py
app/: main.py
app/core/: config.py  deps.py  security.py  templates.py
app/db/: session.py
app/models/: grievance.py  notification.py  user.py
app/routes/: auth.py  dashboard.py  grievances.py
app/schemas/: user.py
app/templates/: base.html  landing.html
app/templates/auth/: login.html  login_admin.html  login_officer.html  login_user.html  register.html
app/templates/dashboard/: admin.html  notifications.html  officer.html  reports.html  user.html  users_list.html
app/templates/grievances/: create.html  detail.html  list.html
